Bug fix - primary nav spacing - width set to 100%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,7 @@ textarea:not([rows]) {
 /* ------------------------------------------------------------ Navigation */
 .primary-navigation {
     position: fixed;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
